added resume details

--- a/templates/about.html
+++ b/templates/about.html
@@ -14,9 +14,9 @@
             <h3 class="text-secondary">BIO</h3>
             <p>
             Hey, my name is Kristian Møller Schmidt. I live in Copenhagen,
-            Denmark. I have a university degree in mathematics, and I'm self-taught in
+            Denmark. I have a degree in mathematics, and I'm self-taught in
             computer science, machine learning and software development in general. 
-            Check out some of my projects, and feel free to send my an email
+            Check out some of my projects, and feel free to send me an email
             if you'd like to work together.
             </p>
         </div>
@@ -27,8 +27,8 @@
             <h3 class="text-secondary">TECHNICAL SKILLS</h3>
             <ul>
                 <li>Python, PHP, SQL, HTML5, CSS, JavaScript</li>
-                <li>Numpy, Matplotlib, Pytorch, Tensorflow, Keras, Scikit-learn</li>
-                <li>VS Code, Atom, Jupytor Notebook</li>
+                <li>Numpy, Pandas, Matplotlib, Pytorch, Tensorflow, Keras, Scikit-learn</li>
+                <li>Visual Studio Code, Atom, Jupytor Notebook</li>
             </ul>
         </div>
     </div>
@@ -36,21 +36,31 @@
     <div class="about-info">
         <div class="bio">
             <h3 class="text-secondary">COURSES & TRAINING</h3>
-            <p>
-            453it95igi59
-            </p>
+            <ul>
+                <li>Principles of Computing 1-3 (Rice University, via Coursera)</li>
+                <li>Algorithms 1-3 (Stanford University, via Coursera) </li>
+                <li>Machine Learning (Stanford University, via Coursera)</li>
+                <li>Deep Learning (Coursera)</li>
+                <li>Artificial Intelligence (Columbia University, via edX)</li>
+                <li>CS231n: Convolutional Neural Networks for Visual Recognition (Stanford)</li>
+            </ul>
+            <p>My solutions to most of the above courses are available on Github</p>
+
         </div>
     </div>
-
 
     <div class="about-info">
         <div class="bio">
             <h3 class="text-secondary">FORMAL EDUCATION</h3>
-            <p>
-          
-            </p>
+            <ul>
+                <li>MA in comparative literature from <i>University Of Copenhagen</i></li>
+                <li>BS in Mathematics from <i>University Of Copenhagen</i> </li> 
+                <li>I expect to finish an MS in mathematics from <i>University Of Copenhagen</i> in 2021, depending on my 
+                    work situation </li>
+            </ul>
         </div>
     </div>
+
 
 </main>
 {% endblock main %}
