--- a/templates/about.html
+++ b/templates/about.html
@@ -29,6 +29,7 @@
                 <li>Python, PHP, SQL, HTML5, CSS, JavaScript</li>
                 <li>Numpy, Pandas, Matplotlib, Pytorch, Tensorflow, Keras, Scikit-learn</li>
                 <li>Visual Studio Code, Atom, Jupytor Notebook</li>
+                <li>Git, Github</li>
             </ul>
         </div>
     </div>
@@ -44,7 +45,7 @@
                 <li>Artificial Intelligence (Columbia University, via edX)</li>
                 <li>CS231n: Convolutional Neural Networks for Visual Recognition (Stanford)</li>
             </ul>
-            <p>My solutions to most of the above courses are available on Github</p>
+            <p style ="font-size: 1rem;">My solutions to the above courses are available on Github</p>
 
         </div>
     </div>
