--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,52 +5,51 @@
     
     <h1 class="md-heading">My 
         <span class="text-secondary">Projects</span>
-    </h1>
-    <br>
+    </h1><br>
+
     <h2 class="sm-heading">
         1. Games & Algorithms 
     </h2>
+
     <div class="projects">
-        <div class="item">
-            <h3 class="text-primary">Puzzles and Search</h4>
-            <div style="min-height:11em">
-            <p>Compare the performance of four different search algorithms as they solve 8- and 15-puzzles.
-            <br><br>Python and Flask on the back-end. HTML, CSS and JS on the front-end</p>
-            </div>  
-            <a href="http://kristianmschmidt.pythonanywhere.com/puzzle" target="_blank" class="btn-light">
-            <i class="fas fa-eye"></i> Web App
-            </a>
-            <a href="https://github.com/KristianMSchmidt/flask-8-puzzle" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-            </a>
-        </div>
-        <div class="item">
-            <h3 class="text-primary">Sudoku Solver</h4>
-            <div style="min-height:11em">
-            <p>
-            A speed-uptimized sudoku solver using backtracking search and an arc-consistency algorithm.
-            <br><br>
-            Python and Flask on the back-end. HTML, CSS and JS on the front-end</p>
+        <div class="project">
+            <h3 class="text-primary">PUZZLES AND SEARCH</h3>
+            <p>Compare the performance of four different search algorithms as they solve 8- and 15-puzzles.</p>
+            <p>Python and Flask on the back-end. HTML, CSS and JS on the front-end</p>
+            <div class = "project-links">
+                <a href="http://kristianmschmidt.pythonanywhere.com/puzzle" target="_blank" class="btn-light">
+                    <i class="fas fa-eye"></i> Web App
+                </a>
+                <a href="https://github.com/KristianMSchmidt/flask-8-puzzle" class="btn-dark">
+                    <i class="fab fa-github"></i> Github
+                </a>
             </div>
-            <a href="http://kristianmschmidt.pythonanywhere.com/sudoku" target="_blank" class="btn-light">
-            <i class="fas fa-eye"></i> Web App
-            </a>
-            <a href="https://github.com/KristianMSchmidt/Sudoku-solver-Flask-web-app-" target="_blank" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-            </a>
         </div>
-        <div class="item">
-            <h3 class="text-primary">2048 AI-player</h4>
-            <div style="min-height:11em">
-            <p>An AI-player for the classic 2048 game. AI uses mini-max search and different heuristics.
-            <br><br>Python and Flask on the back-end. HTML, CSS and JS on the front-end.</p>
-            </div>  
-            <a href="http://kristianmschmidt.pythonanywhere.com/twentyfortyeight" target="_blank" class="btn-light">
-            <i class="fas fa-eye"></i> Web App
-            </a>
-            <a href="https://github.com/KristianMSchmidt/2048-game-" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-            </a>
+        <div class="project">
+            <h3 class="text-primary">FAST SODUKO SOLVER</h3>
+            <p>A speed-uptimized sudoku solver using backtracking search and an arc-consistency algorithm.</p>
+            <p>Python and Flask on the back-end. HTML, CSS and JS on the front-end.</p>
+            <div class = "project-links">
+                <a href="http://kristianmschmidt.pythonanywhere.com/sudoku" target="_blank" class="btn-light">
+                    <i class="fas fa-eye"></i> Web App
+                </a>
+                <a href="https://github.com/KristianMSchmidt/Sudoku-solver-Flask-web-app-" target="_blank" class="btn-dark">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
+        </div>
+        <div class="project">
+            <h3 class="text-primary">2048 AI-PLAYER</h3>
+            <p>An AI-player for the classic 2048 game. AI uses mini-max search and different heuristics.</p>
+            <p>Python and Flask on the back-end. HTML, CSS and JS on the front-end.</p>
+            <div class = "project-links">
+                <a href="http://kristianmschmidt.pythonanywhere.com/twentyfortyeight" target="_blank" class="btn-light">
+                    <i class="fas fa-eye"></i> Web App
+                </a>
+                <a href="https://github.com/KristianMSchmidt/2048-game-" class="btn-dark">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
         </div>        
     </div>
     <h2 class="sm-heading">
