--- a/static/css/main.css
+++ b/static/css/main.css
@@ -291,7 +291,7 @@ main#home h1 {
   -ms-grid-column: 2;
   -ms-grid-column-span: 2;
   grid-area: bio;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 .about-info .job-1 {
@@ -321,7 +321,7 @@ main#home h1 {
 .projects {
   display: -ms-grid;
   display: grid;
-  grid-gap: 0.9rem;
+  grid-gap: 2.9rem;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
   margin-bottom: 3em;
@@ -337,6 +337,19 @@ main#home h1 {
   border-color: #55b4b0;
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
+}
+
+.projects .project {
+  height: 100%;
+  border-collapse: collapse;
+  display: table;
+}
+
+.projects .project .project-links {
+  display: none;
+  display: table-row;
+  vertical-align: bottom;
+  height: 1px;
 }
 
 .boxes {
