--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
         <div class="bio">
             <h3 class="text-secondary">TECHNICAL SKILLS</h3>
             <ul>
-                <li>Python, PHP, MySQL, HTML5, CSS, JavaScript</li>
+                <li>Python, PHP, SQL, HTML5, CSS, JavaScript</li>
                 <li>Numpy, Pandas, Matplotlib, Pytorch, Tensorflow, Keras, Scikit-learn</li>
                 <li>Visual Studio Code, Atom, Jupytor Notebook</li>
                 <li>Git, Github</li>
