--- a/templates/about.html
+++ b/templates/about.html
@@ -13,11 +13,11 @@
         <div class="bio">
             <h3 class="text-secondary">BIO</h3>
             <p>
-            Hey, my name is Kristian Møller Schmidt. I live in Copenhagen,
-            Denmark. I have a degree in mathematics, and I'm self-taught in
-            computer science, machine learning and software development in general. 
-            Check out some of my projects, and feel free to send me an email
-            if you'd like to work together.
+            Hey, my name is Kristian Møller Schmidt. I live in Copenhagen, Denmark. I'm a mathematician 
+            by training and a self-taught programmer with a preference
+            for mathy backend stuff, algorithmic challenges and predictive modelling. However, I enjoy
+            coding in general and I'm not afraid of the nitty gritty of full stack development.
+            Check out some of my work, and feel free to send me an email if you'd like to work together.
             </p>
         </div>
     </div>
@@ -37,7 +37,7 @@
 
     <div class="about-info">
         <div class="bio">
-            <h3 class="text-secondary">COURSES & TRAINING</h3>
+            <h3 class="text-secondary">COURSES & INFORMAL TRAINING</h3>
             <ul>
                 <li>Principles of Computing 1-3 (Rice University, via Coursera)</li>
                 <li>Algorithms 1-3 (Stanford University, via Coursera) </li>
@@ -47,7 +47,6 @@
                 <li>CS231n: Convolutional Neural Networks for Visual Recognition (Stanford)</li>
             </ul>
             <p style ="font-size: 1rem;">My solutions to the above courses are available on Github</p>
-
         </div>
     </div>
 
@@ -55,14 +54,29 @@
         <div class="bio">
             <h3 class="text-secondary">FORMAL EDUCATION</h3>
             <ul>
-                <li>MA in comparative literature from <i>University Of Copenhagen</i></li>
-                <li>BS in Mathematics from <i>University Of Copenhagen</i> </li> 
-                <li>I expect to finish an MS in mathematics from <i>University Of Copenhagen</i> in 2021, depending on my 
+                <li>Master's degree in Modern Culture from <i>University Of Copenhagen</i></li>
+                <li>Bachelor's degree in Mathematics from <i>University Of Copenhagen</i> </li> 
+                <li>I expect to finish a master's degree in mathematics from <i>University Of Copenhagen</i> in 2021, depending on my 
                     work situation </li>
             </ul>
         </div>
     </div>
 
-
+    <div class="about-info">
+        <div class="bio">
+            <h3 class="text-secondary">TEACHING EXPERINCE & COMMUNICATION SKILLS</h3>
+            <ul>
+                <li>I currently teach math for adults at high school level</li>
+                <li>Previously, I’ve taught undergraduate level math at
+                     university ('instructor') and cultural and 
+                     political theory at graduate level (‘external lecturer’)</li> 
+                <li>I have great oral and written communication skills. For a reference on 
+                    the latter, check out
+                    <a href="https://www.information.dk/kristian-moeller-schmidt" class="list-link">some of my writing</a> 
+                    for the Danish newspaper Information
+                </li>
+            </ul>
+        </div>
+    </div>
 </main>
 {% endblock main %}
