--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,7 @@
         <div class="bio">
             <h3 class="text-secondary">TECHNICAL SKILLS</h3>
             <ul>
-                <li>Python, PHP, SQL, HTML5, CSS, JavaScript</li>
+                <li>Python, PHP, SQL, HTML5, CSS, Sass CSS, JavaScript</li>
                 <li>Numpy, Pandas, Matplotlib, Pytorch, Tensorflow, Keras, Scikit-learn</li>
                 <li>Visual Studio Code, Atom, Jupytor Notebook</li>
                 <li>Git, Github</li>
@@ -45,8 +45,9 @@
                 <li>Deep Learning (Coursera)</li>
                 <li>Artificial Intelligence (Columbia University, via edX)</li>
                 <li>CS231n: Convolutional Neural Networks for Visual Recognition (Stanford)</li>
-            </ul>
-            <p style ="font-size: 1rem;">My solutions to the above courses are available on Github</p>
+            </ul>                
+            <p style ="font-size: 1rem;">My code to most of the above courses is available on
+                <a href="https://github.com/KristianMSchmidt" class="list-link">Github</a></p> 
         </div>
     </div>
 
