--- a/templates/projects.html
+++ b/templates/projects.html
@@ -15,7 +15,7 @@
         <div class="project">
             <h3 class="text-primary">PUZZLES AND SEARCH</h3>
             <p>Compare the performance of four different search algorithms as they solve 8- and 15-puzzles.</p>
-            <p>Python and Flask on the back-end. HTML, CSS and JS on the front-end</p>
+            <p>Python and Flask on the back-end. HTML, CSS and JS on the front-end.</p>
             <div class = "project-links">
                 <a href="http://kristianmschmidt.pythonanywhere.com/puzzle" target="_blank" class="btn-light">
                     <i class="fas fa-eye"></i> Web App
