--- a/static/css/main.css
+++ b/static/css/main.css
@@ -330,21 +330,14 @@ main#home h1 {
   display: -ms-grid;
   display: grid;
   grid-gap: 2.9rem;
+  margin-bottom: 3em;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
-  margin-bottom: 3em;
 }
 
-.projects img {
-  width: 100%;
-  border: 3px #fff solid;
-}
-
-.projects img:hover {
-  opacity: 0.5;
-  border-color: #55b4b0;
-  -webkit-transition: all 0.5s ease-out;
-  transition: all 0.5s ease-out;
+.projects.big {
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
 }
 
 .projects .project {
