--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -24,11 +24,9 @@ h2,
 h3 {
   margin: 0;
   font-weight: 400;
-
   &.lg-heading {
     font-size: 6rem;
   }
-
   &.md-heading {
     font-size: 3rem;
   }
@@ -137,17 +135,10 @@ main {
 .projects {
   display: grid;
   grid-gap: 2.9rem;
-  grid-template-columns: 1fr 1fr 1fr;
   margin-bottom: 3em;
-  img {
-    width: 100%;
-    border: 3px #fff solid;
-
-    &:hover {
-      opacity: 0.5;
-      border-color: $secondary-color;
-      @include easeOut;
-    }
+  grid-template-columns: 1fr 1fr 1fr;
+  &.big {
+    grid-template-columns: 1fr 1fr;
   }
   .project {
     height: 100%;
