--- a/templates/about.html
+++ b/templates/about.html
@@ -13,11 +13,11 @@
         <div class="bio">
             <h3 class="text-secondary">BIO</h3>
             <p>
-            Hey, my name is Kristian Møller Schmidt. I live in Copenhagen, Denmark. I'm a mathematician 
-            by training and a self-taught programmer with a preference
-            for mathy backend stuff, algorithmic challenges and predictive modelling. However, I enjoy
-            coding in general and I'm not afraid of the nitty gritty of full stack development.
-            Check out some of my work, and feel free to send me an email if you'd like to work together.
+                Hey, my name is Kristian Møller Schmidt. I live in Copenhagen, Denmark.
+                I'm a mathematician by training and a self-taught programmer with a preference
+                for math-heavy backend stuff and predictive modeling. However, I like coding
+                in general and I'm open for new challenges. Check out some of my work, and feel
+                free to send me an email if you'd like to work together.
             </p>
         </div>
     </div>
@@ -37,7 +37,7 @@
 
     <div class="about-info">
         <div class="bio">
-            <h3 class="text-secondary">COURSES & INFORMAL TRAINING</h3>
+            <h3 class="text-secondary">ONLINE COURSES & INFORMAL TRAINING</h3>
             <ul>
                 <li>Principles of Computing 1-3 (Rice University, via Coursera)</li>
                 <li>Algorithms 1-3 (Stanford University, via Coursera) </li>
@@ -57,7 +57,7 @@
             <ul>
                 <li>Master's degree in Modern Culture from <i>University Of Copenhagen</i></li>
                 <li>Bachelor's degree in Mathematics from <i>University Of Copenhagen</i> </li> 
-                <li>I expect to finish a master's degree in mathematics from <i>University Of Copenhagen</i> in 2021, depending on my 
+                <li>I expect to finish a master's degree in mathematics from <i>University Of Copenhagen</i> in 2021 or 2022, depending on my 
                     work situation </li>
             </ul>
         </div>
@@ -67,11 +67,11 @@
         <div class="bio">
             <h3 class="text-secondary">TEACHING EXPERINCE & COMMUNICATION SKILLS</h3>
             <ul>
-                <li>I currently teach math for adults at high school level</li>
+                <li>I work part time as math teacher for adults at high school level</li>
                 <li>Previously, I’ve taught undergraduate level math at
                      university ('instructor') and cultural and 
                      political theory at graduate level (‘external lecturer’)</li> 
-                <li>I have great oral and written communication skills. For a reference on 
+                <li>I have good oral and written communication skills. For a reference on 
                     the latter, check out
                     <a href="https://www.information.dk/kristian-moeller-schmidt" class="list-link">some of my writing</a> 
                     for the Danish newspaper Information
