--- a/templates/projects.html
+++ b/templates/projects.html
@@ -8,14 +8,13 @@
     </h1><br>
 
     <h2 class="sm-heading">
-        1. Games & Algorithms 
+        1. Games & Algorithms (Flask Web Apps)
     </h2>
-
-    <div class="projects">
+    <div class="projects small">
         <div class="project">
             <h3 class="text-primary">PUZZLES AND SEARCH</h3>
             <p>Compare the performance of four different search algorithms as they solve 8- and 15-puzzles.</p>
-            <p>Python and Flask on the back-end. HTML, CSS and JS on the front-end.</p>
+            <p>Algorithms written in Python. HTML, CSS and JS on the front-end.</p>
             <div class = "project-links">
                 <a href="http://kristianmschmidt.pythonanywhere.com/puzzle" target="_blank" class="btn-light">
                     <i class="fas fa-eye"></i> Web App
@@ -28,7 +27,7 @@
         <div class="project">
             <h3 class="text-primary">FAST SODUKO SOLVER</h3>
             <p>A speed-uptimized sudoku solver using backtracking search and an arc-consistency algorithm.</p>
-            <p>Python and Flask on the back-end. HTML, CSS and JS on the front-end.</p>
+            <p>Algorithms written in Python. HTML, CSS and JS on the front-end.</p>
             <div class = "project-links">
                 <a href="http://kristianmschmidt.pythonanywhere.com/sudoku" target="_blank" class="btn-light">
                     <i class="fas fa-eye"></i> Web App
@@ -41,7 +40,7 @@
         <div class="project">
             <h3 class="text-primary">2048 AI-PLAYER</h3>
             <p>An AI-player for the classic 2048 game. AI uses mini-max search and different heuristics.</p>
-            <p>Python and Flask on the back-end. HTML, CSS and JS on the front-end.</p>
+            <p>Algorithms written in Python. HTML, CSS and JS on the front-end.</p>
             <div class = "project-links">
                 <a href="http://kristianmschmidt.pythonanywhere.com/twentyfortyeight" target="_blank" class="btn-light">
                     <i class="fas fa-eye"></i> Web App
@@ -52,11 +51,34 @@
             </div>
         </div>        
     </div>
+
     <h2 class="sm-heading">
-        2. Machine Learning Project (under construction)
+        2. Full Stack Projects 
     </h2>
-    <h2 class="sm-heading">
-        3. Database Project (under construction)
-    </h2>
+    <div class="projects big">
+        <div class="project">
+            <h3 class="text-primary">BUG TRACKER</h3>
+            <p>This is a ticket tracking system, that could be used by an IT company to keep
+                track of users, tickets, and projects. Features multi-role authentication and authorization,
+                a notification system and responsive front-end design.   
+
+                I've build this project from scratch, including relational database design. 
+
+            </p>
+            <p>Backend build with object-oriented PHP, raw SQL and a MySql-database. 
+                Front end build with HTML, CSS and JS.
+            </p>
+            <p>Recommended browser: Chrome</p> 
+
+            <div class = "project-links">
+                <a href="https://kristiansbugtracker.000webhostapp.com/view/pages/demo_login.php" target="_blank" class="btn-light">
+                    <i class="fas fa-eye"></i> Web App
+                </a>
+                <a href="https://github.com/KristianMSchmidt/bug_tracker" class="btn-dark">
+                    <i class="fab fa-github"></i> Github
+                </a>
+            </div>
+        </div>
+    </div>
 </main>
 {% endblock main %}
