--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,4 @@
-{% extends 'base.html' %}
-{% block title %}My Resume{% endblock title %}
-{% block main %}
+{% extends 'base.html' %} {% block title %}My Resume{% endblock title %} {% block main %}
 <main id="about">
     <h1 class="md-heading">
         About <span class="text-secondary">Me</span>
@@ -9,15 +7,12 @@
 
 
     <div class="about-info">
-        
+
         <div class="bio">
             <h3 class="text-secondary">BIO</h3>
             <p>
-                Hey, my name is Kristian Møller Schmidt. I live in Copenhagen, Denmark.
-                I'm a mathematician by training and a self-taught programmer with a preference
-                for math-heavy backend stuff and predictive modeling. However, I like coding
-                in general and I'm open for new challenges. Check out some of my work, and feel
-                free to send me an email if you'd like to work together.
+                Hey, my name is Kristian Møller Schmidt. I live in Copenhagen, Denmark. I'm a mathematician by training and a self-taught programmer with a preference for algorithmic backend stuff, data analysis and predictive modeling. However, since spring 2020, I've
+                mostly studied web development, front-end and back-end. I like coding in general and I'm open for new challenges. Check out some of my projects, and feel free to send me an email if you'd like to work together.
             </p>
         </div>
     </div>
@@ -45,9 +40,9 @@
                 <li>Deep Learning (Coursera)</li>
                 <li>Artificial Intelligence (Columbia University, via edX)</li>
                 <li>CS231n: Convolutional Neural Networks for Visual Recognition (Stanford)</li>
-            </ul>                
-            <p style ="font-size: 1rem;">My code to most of the above courses is available on
-                <a href="https://github.com/KristianMSchmidt" class="list-link">Github</a></p> 
+            </ul>
+            <p style="font-size: 1rem;">My code to most of the above courses is available on
+                <a href="https://github.com/KristianMSchmidt" class="list-link">Github</a></p>
         </div>
     </div>
 
@@ -56,9 +51,8 @@
             <h3 class="text-secondary">FORMAL EDUCATION</h3>
             <ul>
                 <li>Master's degree in Modern Culture from <i>University Of Copenhagen</i></li>
-                <li>Bachelor's degree in Mathematics from <i>University Of Copenhagen</i> </li> 
-                <li>I expect to finish a master's degree in mathematics from <i>University Of Copenhagen</i> in 2021 or 2022, depending on my 
-                    work situation </li>
+                <li>Bachelor's degree in Mathematics from <i>University Of Copenhagen</i> </li>
+                <li>I expect to finish a master's degree in mathematics from <i>University Of Copenhagen</i> in 2021 or 2022, depending on my work situation </li>
             </ul>
         </div>
     </div>
@@ -68,13 +62,9 @@
             <h3 class="text-secondary">TEACHING EXPERINCE & COMMUNICATION SKILLS</h3>
             <ul>
                 <li>I work part time as math teacher for adults at high school level</li>
-                <li>Previously, I’ve taught undergraduate level math at
-                     university ('instructor') and cultural and 
-                     political theory at graduate level (‘external lecturer’)</li> 
-                <li>I have good oral and written communication skills. For a reference on 
-                    the latter, check out
-                    <a href="https://www.information.dk/kristian-moeller-schmidt" class="list-link">some of my writing</a> 
-                    for the Danish newspaper Information
+                <li>Previously, I’ve taught undergraduate level math at university ('instructor') and cultural and political theory at graduate level (‘external lecturer’)</li>
+                <li>I have good oral and written communication skills. For a reference on the latter, check out
+                    <a href="https://www.information.dk/kristian-moeller-schmidt" class="list-link">some of my writing</a> for the Danish newspaper Information
                 </li>
             </ul>
         </div>
