--- a/templates/projects.html
+++ b/templates/projects.html
@@ -17,8 +17,7 @@
             <p>The back-end is build with (object-oriented) PHP, raw SQL and a MySql-database. On the front-end, I've used plain HTML, CSS and JS. For the styling of a few components (tables and pop-ups) I've used a light-weight CSS-library, but the rest
                 is build with vanilla technologies, including the CSS flex-box model.
             </p>
-            <p>If you only visit once, I recommend that you log in 'Demo Admin'.</p>
-            <p>NB: The project is still under development. So far, I recommend using Chrome. </p>
+            <p>If you only visit once, I recommend that you log in as 'Demo Admin'. Use Chrome. </p>
 
             <div class="project-links">
                 <a href="https://kristiansbugtracker.000webhostapp.com/view/pages/demo_login.php" target="_blank" class="btn-light">
