--- a/templates/projects.html
+++ b/templates/projects.html
@@ -14,9 +14,8 @@
             <p>This is a ticket tracking system that could be used by, e.g., a sofware company to keep track of employees, projects and tickets. The program features multi-role authentication and authorization, demo-login and an automated notification system.
                 I've build this project from scratch, including relational database design and a responsive front-end.
             </p>
-            <p>The back-end is build with (object-oriented) PHP, raw SQL and a MySql-database. On the front-end, I've used plain HTML, CSS and JS. For the styling of a few components (tables and pop-ups) I've used a light-weight CSS-library, but the rest
-                is build with vanilla technologies, including the CSS flex-box model.
-            </p>
+            <p>The back-end is build with (object-oriented) PHP, raw SQL and a MySql-database. On the front-end, I've build everything up from vanilla technologies (plain HTML, CSS and JS), except for the styling of a few components (tables and pop-ups),
+                where I've used a light-weight CSS-library.</p>
             <p>If you only visit once, I recommend that you log in as 'Demo Admin'. Use Chrome. </p>
 
             <div class="project-links">
@@ -37,7 +36,7 @@
         <div class="project">
             <h3 class="text-primary">PUZZLES AND SEARCH</h3>
             <p>Compare the performance of four different search algorithms as they solve 8- and 15-puzzles.</p>
-            <p>Algorithms and data structues coded up in Python. HTML, CSS and JS on the front-end.</p>
+            <p>Algorithms and data structures coded up in Python. HTML, CSS and JS on the front-end.</p>
             <div class="project-links">
                 <a href="http://kristianmschmidt.pythonanywhere.com/puzzle" target="_blank" class="btn-light">
                     <i class="fas fa-eye"></i> Web App
@@ -50,7 +49,7 @@
         <div class="project">
             <h3 class="text-primary">FAST SODUKO SOLVER</h3>
             <p>A speed-uptimized sudoku solver using backtracking search and an arc-consistency algorithm.</p>
-            <p>Algorithms and data structues coded up in Python. HTML, CSS and JS on the front-end.</p>
+            <p>Algorithms and data structures coded up in Python. HTML, CSS and JS on the front-end.</p>
             <div class="project-links">
                 <a href="http://kristianmschmidt.pythonanywhere.com/sudoku" target="_blank" class="btn-light">
                     <i class="fas fa-eye"></i> Web App
@@ -63,7 +62,7 @@
         <div class="project">
             <h3 class="text-primary">2048 AI-PLAYER</h3>
             <p>An AI-player for the classic 2048 game. AI uses mini-max search and different heuristics.</p>
-            <p>Algorithms and data structues coded up in Python. HTML, CSS and JS on the front-end.</p>
+            <p>Algorithms and data structures coded up in Python. HTML, CSS and JS on the front-end.</p>
             <div class="project-links">
                 <a href="http://kristianmschmidt.pythonanywhere.com/twentyfortyeight" target="_blank" class="btn-light">
                     <i class="fas fa-eye"></i> Web App
