--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,6 +5,8 @@
         <span class="text-secondary">Projects</span>
     </h1><br>
 
+
+
     <h2 class="sm-heading">
         1. Full-Stack Database Projects
     </h2>
@@ -14,10 +16,9 @@
             <p>This is a ticket tracking system that could be used by, e.g., a sofware company to keep track of employees, projects and tickets. The program features multi-role authentication and authorization, demo-login and an automated notification system.
                 I've build this project from scratch, including relational database design and a responsive front-end.
             </p>
-            <p>The back-end is build with (object-oriented) PHP, raw SQL and a MySql-database. On the front-end, I've build everything up from vanilla technologies (plain HTML, CSS and JS), except for the styling of a few components (tables and pop-ups),
-                where I've used a light-weight CSS-library.</p>
-            <p>If you only visit once, I recommend that you log in as 'Demo Admin'. Use Chrome. </p>
-
+            <p>The back-end is build with (object-oriented) PHP, raw SQL and a MySql-database. On the front-end, I've build everything up with vanilla HTML, CSS and JS, except for the styling of a few components (tables and pop-ups), where I've used a light-weight
+                CSS-library.</p>
+            <p>If you only visit once, I recommend that you log in as 'Demo Admin'. If something looks strange in your browser, try Chrome. </p>
             <div class="project-links">
                 <a href="https://kristiansbugtracker.000webhostapp.com/view/pages/demo_login.php" target="_blank" class="btn-light">
                     <i class="fas fa-eye"></i> Web App
