--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,16 @@
-{% extends 'base.html' %}
-{% block title %}Welcome To My Portfolio{% endblock title %}
-
-{% block main %}
+{% extends 'base.html' %} {% block title %}Welcome To My Portfolio{% endblock title %} {% block main %}
 <main id="home">
     <h1 class="md-heading">
-        Kristian 
+        Kristian
         <span class="text-secondary">Møller Schmidt</span>
     </h1>
     <h2 class="sm-heading">Mathematician & Developer</h2>
     <div class="icons">
+
         <a href="https://www.linkedin.com/in/kristian-m%C3%B8ller-schmidt-516b9170/">
             <i class="fab fa-linkedin fa-2x"></i>
         </a>
+
         <a href="https://github.com/KristianMSchmidt">
             <i class="fab fa-github fa-2x"></i>
         </a>
