--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,8 +5,6 @@
         <span class="text-secondary">Projects</span>
     </h1><br>
 
-
-
     <h2 class="sm-heading">
         1. Full-Stack Database Projects
     </h2>
@@ -17,7 +15,8 @@
                 I've build this project from scratch, including relational database design and a responsive front-end.
             </p>
             <p>The back-end is build with (object-oriented) PHP, raw SQL and a MySql-database. On the front-end, I've build everything up with vanilla HTML, CSS and JS, except for the styling of a few components (tables and pop-ups), where I've used a light-weight
-                CSS-library.</p>
+                CSS-library.
+            </p>
             <p>If you only visit once, I recommend that you log in as 'Demo Admin'. If something looks strange in your browser, try Chrome. </p>
             <div class="project-links">
                 <a href="https://kristiansbugtracker.000webhostapp.com/view/pages/demo_login.php" target="_blank" class="btn-light">
