--- a/templates/about.html
+++ b/templates/about.html
@@ -23,7 +23,7 @@
             <ul>
                 <li>Python, PHP, SQL, HTML5, CSS, Sass CSS, JavaScript</li>
                 <li>Numpy, Pandas, Matplotlib, Pytorch, Tensorflow, Keras, Scikit-learn</li>
-                <li>Visual Studio Code, Atom, Jupytor Notebook</li>
+                <li>Visual Studio Code, Atom, Jupyter Notebook</li>
                 <li>Git, Github</li>
                 <li>Flask</li>
             </ul>
