some minor change

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -11,7 +11,7 @@
     <div class="projects big">
         <div class="project">
             <h3 class="text-primary">BUG TRACKER</h3>
-            <p>This is a ticket tracking system that could be used by, e.g., a sofware company to keep track of employees, projects and tickets. The program features multi-role authentication and authorization, demo-login and an automated notification system.
+            <p>This is a ticket tracking system that could be used by e.g. a sofware company to keep track of employees, projects and tickets. The program features multi-role authentication and authorization, demo-login and an automated notification system.
                 I've build this project from scratch, including relational database design and a responsive front-end.
             </p>
             <p>The back-end is build with (object-oriented) PHP, raw SQL and a MySql-database. On the front-end, I've build everything up with vanilla HTML, CSS and JS, except for the styling of a few components (tables and pop-ups), where I've used a light-weight
